--- a/bottomPanel.css
+++ b/bottomPanel.css
@@ -10,3 +10,41 @@
     top:50%;
     background-color: red;
 }
+.bottomLayerSelection{
+    border-radius: 1%;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2%;
+    margin-left:4px;
+    width:16.9%;
+}
+.bottomLayerSelection img{
+    border-radius: 5%;
+    border: 1px solid black;
+    width:55%;
+    height: 40%;
+}
+.bottomLayerSelection p{
+    padding:10px;
+    margin-top:2%;
+    font-size: 20px;
+}
+.bottomLayerSelection button{
+    width: 20%;
+    margin-top:5%;
+    padding:10px;
+    border-radius: 7%;
+    border: none;
+    transition: background-color 0.2s ease;
+}
+.bottomLayerSelection button:hover{
+    cursor: pointer;
+    background-color: darkgrey;
+    transition: background-color 0.2s ease;
+}
+.bottomLayerSelection button:active{
+    background-color: rgb(93, 93, 93);
+}
