--- a/bottomPanel.css
+++ b/bottomPanel.css
@@ -8,11 +8,11 @@
     display: flex;
     position: absolute;
     top:50%;
-    background-color: red;
+    /* background-color: red; */
 }
 .bottomLayerSelection{
+    padding-top:10px;
     border-radius: 1%;
-    border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -20,10 +20,15 @@
     margin-top: 2%;
     margin-left:4px;
     width:16.9%;
+    transition: background-color 0.3s ease;
+}
+.bottomLayerSelection:hover{
+    background-color: rgba(81, 81, 81, 0.699);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 .bottomLayerSelection img{
     border-radius: 5%;
-    border: 1px solid black;
     width:55%;
     height: 40%;
 }
