--- a/centerPanel.css
+++ b/centerPanel.css
@@ -3,7 +3,7 @@
     padding:0;
 }
 #mainPage{
-    background-color: white;
+    background-color: rgb(61, 61, 61);
     width: 100%;
     height:82.7%;
     position: absolute;
@@ -23,10 +23,12 @@
     margin:20px 0px 0px 10px;
     display: flex;
     align-items: center;
-    background-color: aliceblue;
+    color: white;
     width: 21%;
 }
-
+.topLayerSelection p{
+    margin-left: 10px;
+}
 /* Middle Layer */
 #middleLayer{
     margin:20px 0px 0px 10px;
@@ -39,7 +41,9 @@
     width: 100%;
 }
 .middleLayerSelection{
-    background-color: antiquewhite;
+    border:1px solid black;
+    border-radius: 5%;
+    color: white;
     width: 10%;
     height: 20%;
 }
